student learning mastery: fix truncation of non-paragraphs
test plan:
  * create an outcome
  * for the description, paste in a div of text from another page
  * view the outcome on the student learning mastery page
  * verify that the description is truncated

Reviewed-on: https://gerrit.instructure.com/36571
Tested-by: Jenkins <jenkins@instructure.com>
QA-Review: Steven Shepherd <sshepherd@instructure.com>
Product-Review: Braden Anderson <braden@instructure.com>

--- a/app/stylesheets/grade_summary.sass
+++ b/app/stylesheets/grade_summary.sass
@@ -362,11 +362,12 @@ $outcome-border: 1px solid #BCC2CA
 
     .description
       color: #2a333b
+      margin: 0
+      white-space: nowrap
+      overflow: hidden
+      text-overflow: ellipsis
       p
-        margin: 0
-        white-space: nowrap
-        overflow: hidden
-        text-overflow: ellipsis
+        display: inline
 
     .title
       font-weight: bold
